# logicmoo_workspace

./: .bash_history  .bashrc  .dockerignore  .gitattributes  .gitconfig  .gitignore  .gitignore.hide  .gitlab-ci.yml  .gitmodules  .kateproject  .p2  .profile  .swiplrc  .viminfo  ChangeLog.md  CurrentlyWorkingOn.vpj  Dockerfile  Dockerfile.new  ExactlyWorkingOn.vpj  History.md  Home.md  INSTALL-DEPS.md  INSTALL-EGGDROP.md  INSTALL-GDrive.md  INSTALL-GITSUBMODULES.md  INSTALL-PACKS.md  INSTALL-SUBMODULES.md  INSTALL-SWI.md  INSTALL.md  Jenkinsfile  LICENSE  LICENSE.md  LogicmooServerLoop.sh  Makefile  Makefile.temp  PRIOR-AGREEMENTS.md  README  README.md  README.rst  RoadMap.md  (+60 more)
.devcontainer/: devcontainer.json  prolog-lsp-2.2.7.vsix
Patch/: 0001-dmiles.patch  0002-dmiles2.patch  dmiles-all.patch  dmiles-attvar.patch  dmiles-no-sandbox.patch  dmiles-save-reference-error.patch
Wei-engine/: db.P  interpreter.P  preprocessor.P  test.P
cpp/: rocksdb4pl.cpp
cudd-3.0.0/: Makefile.in  aclocal.m4
demo/: merge.pl
doc/: Makefile  bib.bib  cplint_r.texi  help-trill.html  help-trill.tex  inf_goals.tex  inference.tex  main.css  manual.html  manual.tex  semantics.tex  syntax.tex  update_version_manual.sh
docker/: .dockerignore  Dockerfile  Dockerfile.32gb  dmiles-make-docker.sh  google_collab.new  google_collab.sh  make-docker.sh
docs/: Makefile  conf.py  index.html  index.rst  make.bat  newbib.bib
eclipse-workspace/: .goalprefs
engine/: db.P  (+1 more)
packs_sys/swicli/: .gitignore  .ignore-on-commit  .project  CMakeLists.txt  Makefile  README.md  make-linux.sh  make-windows.bat  pack.pl  swicli.build
packs_sys/swicli/cmake/: FindMono.cmake  FindYAP.cmake
packs_sys/swicli/cmake/Modules/: CMakeCSharpCompiler.cmake  CMakeCSharpCompiler.cmake.in  FindMono.cmake.2
packs_sys/swicli/doc/: SwiCsPl.shfb  api.html  buildenv.sh  documentation.html  introduction-SbsSW.htm  libcurl.cffi  libpl_so.pl  local-test.sh  mono_embbed_test_main.c  mono_sysvars.sh  sitemap.sitemap  swi-prolog.cffi  winapi_dll.pl
packs_sys/swicli/jsrc/: build.xml
packs_sys/swicli/jsrc/org/logicmoo/jpl/: ByteBuddyUtil.javanew
packs_sys/swicli/jsrc/org/logicmoo/jpl/callback/: PrologWebSocket.java
packs_sys/swicli/lib/amd64/: swicli.dll.config
packs_sys/swicli/lib/x64-win64/: swicli.exp
packs_sys/swicli/prolog/: jpl_for_ikvm.pl  swicffi.pl  swicli.pl
packs_sys/swicli/src/: .editorconfig  CommonAssemblyInfo.cs  SWICLI2010.opensdf  SWICLI2010.sln  SWICLI2010.sln.cache
packs_sys/swicli/src/Debugger.Core.JDWP/Debugger.Core/: Debugger.Core.JDWP.csproj  packages.config
packs_sys/swicli/src/Debugger.Core.JDWP/Debugger.Core/Configuration/: AssemblyInfo.cs
packs_sys/swicli/src/Debugger.Core.JDWP/Debugger.Core/JDWP/: Debugger.cs  JdwpConnection.cs  JdwpEventHandler.cs  JdwpParameters.cs  debugger.sln
packs_sys/swicli/src/Debugger.Core.JDWP/Debugger.Tests/: Debugger.Tests.Boo.csproj
packs_sys/swicli/src/Example4SWICLI/: Example4SWICLI.XML  Example4SWICLI.cs  Example4SWICLI.csproj
packs_sys/swicli/src/Example4SWICLI/Properties/: AssemblyInfo.cs
packs_sys/swicli/src/ExampleCallsPrologSWICLI/: CodeMap1.dgml  ExampleCallsProlog.XML  ExampleCallsProlog.cs  ExampleCallsProlog.sln  ExampleCallsPrologSWICLI.csproj
packs_sys/swicli/src/PlConsole/: CMakeLists.txt  PlConsole.csproj  Program.cs  packages.config
packs_sys/swicli/src/PlConsole/Properties/: AssemblyInfo.cs
packs_sys/swicli/src/SWICFFITests/: SWICFFITests-example.cs
packs_sys/swicli/src/SWICLITestDLL/: NonDetExamples.cs  SWICLITestClass.cs  SWICLITestDLL.XML  SWICLITestDLL.csproj
packs_sys/swicli/src/SWICLITestDLL/Properties/: AssemblyInfo.cs
packs_sys/swicli/src/Swicli.Library/: Arrays.cs  AssemblyLoader.cs  CMakeLists.txt  ChangeLog.txt  ClassBuilder.cs  Coercion.cs  CoercionLayout.cs  Collections.cs  DelegateObjectInProlog.cs  DesignByContract.cs  Embedded.cs  EventHandlerInProlog.cs  Exceptions.cs  ForeignMethod.cs  GenericDelegate.cs  GetSet.cs  IKVMClassLoader.cs  IKVMUtils.cs  Init.cs  Instance.cs  Invoke.cs  JplSafeNativeMethods.cs  LibPl.cs  LockInfo.cs  NativeMethods.cs  NondetContextHandle.cs  PInvokeByEmit.cs  PInvokeDLL.cs  PInvokeMetaObject.cs  PrologBackedDictionary.cs  PrologCLR.cs  PrologCLRExt.cs  PrologClient.cs  Readme.txt  Readme_publish.txt  RuntimeTypeInfo.cs  SBS_OpenSource_KeyPair.snk  SWI-cs-PlQuery.cs  SWI-cs.cs  SWIPlCs.cd  (+9 more)
packs_sys/swicli/src/Swicli.Library/Properties/: AssemblyInfo.cs  Resources.Designer.cs
packs_sys/swicli/src/Swicli.Library/cmake/Modules/: CMakeCSharpInformation.cmake  CMakeDetermineCSharpCompiler.cmake  CMakeTestCSharpCompiler.cmake
packs_sys/swicli/src/Swicli.Library/mindtouch.reflection/: IGenericParameterProvider.cs  IReflectedInfo.cs  ITypeInspector.cs  IsolatedTypeInspector.cs  Makefile  MemberAccess.cs  ParameterBuilder.cs  ReflectedConstructorInfo.cs  ReflectedEventInfo.cs  ReflectedFieldInfo.cs  ReflectedGenericParameterInfo.cs  ReflectedMemberInfo.cs  ReflectedMethodInfo.cs  ReflectedParameterInfo.cs  ReflectedParameterTypeInfo.cs  ReflectedPropertyInfo.cs  ReflectedTypeInfo.cs  TypeInspector.cs  mindtouch.reflection.csproj
packs_sys/swicli/src/Swicli.Library/mindtouch.reflection/Properties/: AssemblyInfo.cs  index.html
packs_sys/swicli/src/ikvm-native/: native.8.vcxproj  native.8.vcxproj.filters
packs_sys/swicli/src/jar2ikvmc/: JarAnalyzer.cs  JarAnalyzer.xsd  Program.cs  jar2ikvmc.csproj
packs_sys/swicli/src/jar2ikvmc/Properties/: AssemblyInfo.cs
packs_sys/swicli/src/swicli/: CMakeLists.txt  swicli.c  swicli32.vcxproj  swicli32.vcxproj.filters  swicli64.cproj  swicli64.vcxproj  swicli64.vcxproj.filters
packs_sys/swicli/src/swicliYap/: CMakeLists.txt  swicliYap.c  swicliYap64.vcxproj
packs_web/swish/pack/libssh/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  config.h  pack.pl
packs_web/swish/pack/libssh/c/: config.h.cmake  sshd4pl.c
packs_web/swish/pack/libssh/cmake/: FindLibSSH.cmake  FindSWI-Prolog.cmake
packs_web/swish/pack/libssh/examples/: password.pl  start.pl
packs_web/swish/pack/libssh/prolog/: ssh_server.pl
(+57841 files in other folders)
